[gd_scene load_steps=16 format=2]

[ext_resource path="res://SelecaoTipo.gd" type="Script" id=1]
[ext_resource path="res://fundo.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Fonts/COOPBL.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Imagens/btnAnimais.png" type="Texture" id=4]
[ext_resource path="res://Assets/Imagens/btnCores.png" type="Texture" id=5]
[ext_resource path="res://Assets/Imagens/btnLetras.png" type="Texture" id=6]
[ext_resource path="res://Assets/Imagens/btnFrutas.png" type="Texture" id=7]
[ext_resource path="res://Assets/Imagens/btnNumeros.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sons/click.wav" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]
outline_color = Color( 0.486275, 0.0823529, 0.0823529, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 3 )

[node name="selecaoTipo" type="Node2D"]
script = ExtResource( 1 )

[node name="fundo" parent="." instance=ExtResource( 2 )]
position = Vector2( 409, 240 )

[node name="btnAnimais" type="Button" parent="."]
margin_left = 108.0
margin_top = 43.0
margin_right = 259.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 1 )
text = "Animais"
icon = ExtResource( 4 )

[node name="btnCores" type="Button" parent="."]
margin_left = 110.0
margin_top = 132.0
margin_right = 259.0
margin_bottom = 188.0
custom_fonts/font = SubResource( 2 )
text = "Cores"
icon = ExtResource( 5 )

[node name="btnLetras" type="Button" parent="."]
margin_left = 106.64
margin_top = 316.515
margin_right = 258.64
margin_bottom = 372.515
rect_pivot_offset = Vector2( -240, 310 )
custom_fonts/font = SubResource( 3 )
text = "Letras"
icon = ExtResource( 6 )

[node name="btnVoltar" type="Button" parent="."]
margin_left = 31.0
margin_top = 422.0
margin_right = 221.0
margin_bottom = 463.0
custom_fonts/font = SubResource( 4 )
text = "<- Voltar"

[node name="btnFrutas" type="Button" parent="."]
margin_left = 111.36
margin_top = 220.425
margin_right = 260.36
margin_bottom = 276.425
custom_fonts/font = SubResource( 5 )
text = "Frutas"
icon = ExtResource( 7 )

[node name="btnNumeros" type="Button" parent="."]
margin_left = 370.693
margin_top = 40.0928
margin_right = 520.693
margin_bottom = 96.0928
custom_fonts/font = SubResource( 6 )
text = "NÃºmeros"
icon = ExtResource( 8 )

[node name="somClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
[connection signal="visibility_changed" from="." to="." method="_on_selecaoTipo_visibility_changed"]
[connection signal="pressed" from="btnAnimais" to="." method="_on_btnAnimais_pressed"]
[connection signal="pressed" from="btnCores" to="." method="_on_btnCores_pressed"]
[connection signal="pressed" from="btnLetras" to="." method="_on_btnLetras_pressed"]
[connection signal="pressed" from="btnVoltar" to="." method="_on_btnVoltar_pressed"]
[connection signal="pressed" from="btnFrutas" to="." method="_on_btnFrutas_pressed"]
[connection signal="pressed" from="btnNumeros" to="." method="_on_btnNumeros_pressed"]
